--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "font-awesome": "^4.7.0",
     "raphael": "^2.2.7",
     "morris.js": "morrisjs#^0.5.1",
-    "metisMenu": "^2.7.0"
+    "metisMenu": "^2.7.0",
+    "socket.io-client": "^2.0.3"
   }
 }
