--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express.io": "^1.1.13",
+    "jwt-simple": "^0.5.1",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "request": "^2.81.0",
+    "serve-favicon": "~2.4.2",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "bower": "^1.8.0",
