--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-jwt": "^5.3.0",
+    "express-partials": "^0.3.0",
+    "google-maps": "^3.2.1",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
   },
