--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "request": "^2.81.0",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "cors": "^2.8.4",
+    "pm2": "^2.6.1",
+    "node-localstorage" : "^1.3.0"
   },
   "devDependencies": {
     "bower": "^1.8.0",
