--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "metisMenu": "^2.7.0",
     "socket.io-client": "^2.0.3",
     "datatables-plugins": "^1.10.15",
-    "datatables-responsive": "^2.1.1"
+    "datatables-responsive": "^2.1.1",
+    "annyang": "2.6.0"
   }
 }
