--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-ejs-layouts": "^2.3.1",
     "express-jwt": "^5.3.0",
-    "express-partials": "^0.3.0",
     "google-maps": "^3.2.1",
     "jwt-simple": "^0.5.1",
     "morgan": "~1.8.1",
+    "node-localstorage": "^1.3.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
+    "pm2": "^2.6.1",
     "request": "^2.81.0",
     "serve-favicon": "~2.4.2",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3",
-    "cors": "^2.8.4",
-    "pm2": "^2.6.1",
-    "node-localstorage" : "^1.3.0"
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "bower": "^1.8.0",
