--- a/conf.js.dist
+++ b/conf.js.dist
@@ -18,7 +18,10 @@ module.exports = {
             api: function () {
                 return {
                     ip : "API_HOSTNAME_OR_IP",
-                    port: 80
+                    port: 80,
+                    full: function () {
+                        return this.ip + ":" + this.port;
+                    }
                 };
             },
             apiSpotify: function () {
