--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-ejs-layouts": "^2.3.1",
     "express-jwt": "^5.3.0",
     "google-maps": "^3.2.1",
+    "jsonwebtoken": "^7.4.3",
     "jwt-simple": "^0.5.1",
     "morgan": "~1.8.1",
     "node-localstorage": "^1.3.0",
